# Synndicate

./: 				  				.pub  .dockerignore  .gitignore  .markdownlint.json  Dockerfile  Dockerfile.vectorstore  LICENSE  Makefile  README.md  dangerfile.ts  debug_test_interactions.py  demo_synndicate.py  docker-compose.vectorstore.yml  docker-compose.yml  package.json  pyproject.toml  run_dynamic_validation.py  temp_mypy_config.txt  test_dynamic_integration.py  test_full_integration.py  test_model_integration_observability.py  test_models.py  test_observability_refactor.py  test_rag_basic.py  test_rag_simple.py  test_tinyllama_complete.py  test_tinyllama_ready.py  test_trace_integration.py  tsconfig.json  validate_dynamic_orchestration.py
.github/: README.md  semantic.yml
.github/workflows/: bandit.yml  ci-status.yml  ci.yml  danger.yml  lint-type.yml  locustfile.py  security.yml  semgrep.yml  test.yml  vectorstore.yml
config/: .gitkeep
config/deployment/: docker-compose.yml  nginx.conf
config/tracing/: docker-compose.yml  jaeger-docker-compose.yml  otel-collector.yml  zipkin-docker-compose.yml
data/: .gitkeep
docs/: ARCHITECTURE.md  DEVELOPMENT.md  MODEL_SETUP.md  distributed-tracing.md
examples/: .gitkeep  demo_synndicate.py
scripts/: phase3_error_validation.py  rag_smoke.py  vector_cli.py  vectorstore_server.py
sdks/python/synndicate_sdk/: __init__.py  client.py
src/synndicate/: __init__.py  main.py
src/synndicate/agents/: __init__.py  base.py  coder.py  critic.py  dynamic_coder.py  dynamic_critic.py  factory.py  multimodal.py  multimodal_agent.py  planner.py
src/synndicate/analytics/: usage_analytics.py
src/synndicate/api/: __init__.py  auth.py  enhanced_server.py  server.py
src/synndicate/config/: __init__.py  container.py  settings.py
src/synndicate/core/: __init__.py  audit.py  determinism.py  dynamic_orchestrator.py  enhanced_orchestrator.py  enhanced_state_machine.py  orchestrator.py  pipeline.py  runtime_patterns.py  state_machine.py
src/synndicate/observability/: __init__.py  distributed_tracing.py  logging.py  metrics.py  monitoring.py  probe.py  tracing.py
synndicate_audit/: tree.txt
synndicate_audit/configs/: .gitkeep
synndicate_audit/endpoints/: health.json  sample_response.json
tests/: __init__.py  conftest.py  test_api_auth.py  test_api_auth_comprehensive.py  test_api_comprehensive.py  test_api_server.py  test_api_server_comprehensive.py  test_distributed_tracing.py  test_dynamic_agents.py  test_dynamic_integration.py  test_dynamic_orchestration.py  test_full_integration.py  test_isolation.py  test_main_entry.py  test_model_integration_observability.py  test_models.py  test_models_comprehensive.py  test_models_system.py  test_observability_comprehensive.py  test_observability_refactor.py  test_orchestrator.py  test_orchestrator_edge_cases.py  test_orchestrator_focused.py  test_phase3_runtime.py  test_phase3_runtime_simple.py  test_rag.py  test_rag_basic.py  test_rag_edge_cases.py  test_rag_simple.py  test_state_machine.py  test_state_machine_focused.py  test_storage_artifacts.py  test_storage_comprehensive.py  test_tinyllama_complete.py  test_tinyllama_ready.py  test_trace_integration.py
validation/: .gitkeep  run_dynamic_validation.py  validate_dynamic_orchestration.py
(+8 files in other folders)
